--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.6",
     "next": "14.2.4",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
     "yup": "^1.4.0"
